Working content service. Have unit tests.
